--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "to-do-list",
   "version": "1.0.0",
-  "description": "",
+  "description": "# Switching to the feature branch",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,9 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^6.2.0",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.47.0",
-    "webpack-cli": "^4.7.2"
+    "style-loader": "^3.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -28,6 +26,17 @@
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.20.1"
-  }
+    "stylelint-scss": "^3.20.1",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Alaska01/ToDoList.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Alaska01/ToDoList/issues"
+  },
+  "homepage": "https://github.com/Alaska01/ToDoList#readme"
 }
