--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "style-loader": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
